--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,10 +22,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,400;1,300&display=swap"
-    rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,400;1,300&display=swap"
+    rel="stylesheet"> -->
 
-<!-- <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet"> -->
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato&family=Oswald:wght@200&family=Shizuru&display=swap" rel="stylesheet">
 
 
   <title>Binger Watchlist</title>
